Add Website Info to Additional Information

--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -35,5 +35,9 @@ name: evidence
     Glassman, James K. <a href="/files/downloads/SL-Background-Glassman-Overview.pdf">"The Great Banks Robbery"</a>. <i>The New Republic</i>, October 8, 1990.<br />
     Edwin Gray, FHLB Chair, Senate Ethics Committee Hearing. <a href="/files/downloads/SL-Background-Ed-Gray-Testimony.pdf">Excerpt from Opening Statement</a>.
   </div>
+  <div>
+    <h3>Website Info</h3>
+    This Keating Five website is a project of Prof. Ross Cheit at Brown University and many student research assistants over the years. Thanks are due especially to Brown for hosting and supporting this project as well as to Michael DOrtenzio and Ryan Chan, former students who have helped to maintain this site. Please e-mail <a href="mailto:info@keatingfive.org">info@keatingfive.org</a> with any comments, questions, and/or feedback.
+  </div>
 </div>
 
